# zkID

./: .gitattributes  .gitignore  README.md
.github/workflows/: jwt-es256-circom-tests.yaml
wallet-unit-poc/: .gitignore  Cargo.toml  output.wtns
wallet-unit-poc/circom/circuits/: claim-decoder.circom  es256.circom  utils.circom
wallet-unit-poc/circom/circuits/ecdsa/p256/: add.circom
wallet-unit-poc/circom/circuits/main/: ecdsa.circom  jwt.circom
wallet-unit-poc/circom/inputs/ecdsa/: default.json
wallet-unit-poc/circom/scripts/: compile.sh
wallet-unit-poc/circom/src/: jwt.ts  utils.ts
wallet-unit-poc/circom/tests/: claim-decoder.test.ts  jwt.test.ts  verify-token.js
wallet-unit-poc/ecdsa-spartan2/: Cargo.toml
wallet-unit-poc/ecdsa-spartan2/src/: main.rs
wallet-unit-poc/src/: jwt.rs  main.rs  sha256.rs
